# azos-py

./: .editorconfig  .gitattributes  AGENTS.md  CLAUDE.md  CONTRIBUTORS  GEMINI.md  LICENSE  README.md  REPORT.md  pi-session-2026-06-08T03-30-48-796Z_019ea548-715c-7521-aad0-bcde96264521.html  pyproject.toml  test.py  test_cm.py  test_type.py  test_typing.py
.github/: copilot-instructions.md
azos/: __init__.py  atom.py  azapp.py  azatom.py  azentityid.py  exceptions.py
src/azos/: application.py  asyncdaemon.py  atom.py  azapp.py  azatom.py  azentityid.py  azexceptions.py  chassis.py  conio.py  daemons.py  descriptor.py  entityid.py  exceptions.py  fastapiutils.py  oop.py
src/azos/apm/: __init__.py  log.py  logbuffer.py  otel.py
src/azos/conf/: __init__.py  configuration.py  laconfig_lexer.py  laconfig_parser.py  nodes.py  project.md  tasks.md
src/azos/stock_content/: __init__.py  loader.py
src/azos/stock_content/content/cfg/: vars.ini
src/azos/stock_content/content/cfg/log/: levels.ini  log-dev.ini
src/azos/svc/: circuitbreaker.py
tests/: atom-tests.py  atom_tests.py  azcontext.py  chassis_tests.py  component_tests.py  descriptor_as_tests.py  descriptor_eval_tests.py  descriptor_man01_tests.py  descriptor_man02_tests.py  descriptor_nav_tests.py  descriptor_override_tests.py  descriptor_tests.py  dicontainer_tests.py  entityid_tests.py  readme.md  zzz.ipynb
tests/conf/: test_laconfig_lexer.py  test_laconfig_parser.py  test_nodes.py
toys/: apm-api-local.ini  apm-api.py  apm-cli-local.ini  apm-cli.ini  apm-cli.py  simple.py  toy-apm-api-local.ini  toy-apm-cli.py
toys/cfg/: log.local.ini
