[project]
name = "azos"
version = "0.2.1"
description = "Provides Azos base types and services functionality for Python apps"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Authors/Maintainers (metadata similar to NuGet)
authors = [
  { name = "Azist", email = "azist@zhabis.com" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Core dependencies (installed by default)
dependencies = [
    # "requests>=2.0.0",  # Example: Everyone using 'azos' gets this
    "opentelemetry-api==1.41.1",
    "opentelemetry-exporter-otlp==1.41.1",
    "opentelemetry-sdk==1.41.1",
    "opentelemetry-instrumentation-requests==0.62b1",
    "opentelemetry-instrumentation-fastapi==0.62b1",
    "fastapi==0.136.3",
    "uvicorn==0.49.0",
    "opentelemetry-exporter-otlp-proto-http==1.41.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.41.1",
    "opentelemetry-instrumentation==0.62b1",
    "opentelemetry-instrumentation-asgi==0.62b1",
    "opentelemetry-instrumentation-httpx==0.62b1",
    "opentelemetry-proto==1.41.1",
    "opentelemetry-semantic-conventions==0.62b1",
    "opentelemetry-util-http==0.62b1",
    "opentelemetry-exporter-otlp-proto-common==1.41.1",
]

# --------------------------------------------------------
# OPTIONAL DEPENDENCIES (The [Square Brackets] features)
# --------------------------------------------------------
[project.optional-dependencies]
# Usage: pip install "azos[apm]"
# This allows you to keep heavy APM libraries optional
apm = [
    "opentelemetry-api>=1.20"
]

# Usage: pip install "azos[dev]"
# Dependencies needed only for testing/development
dev = [
    "pytest",
    "ruff"
]

[project.urls]
"Homepage" = "https://github.com/azist/azos-py"
"Bug Tracker" = "https://github.com/azist/azos-py/issues"

# --------------------------------------------------------
# BUILD SYSTEM CONFIGURATION (UV uses HATCHLING by default)
# --------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# This ensures 'uv' looks for your code in the 'src' directory
[tool.hatch.build.targets.wheel]
packages = ["src/azos"]

# --------------------------------------------------------
# PYTEST CONFIGURATION
# --------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["*_tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
